--- a/assets/own_style.css
+++ b/assets/own_style.css
@@ -80,8 +80,8 @@ h2 {
 
 .check_input {
   display: 'inline-block';
-  /* padding-left: 10px;
-  padding-right: 10px; */
+  margin-left: 20px;
+  /* padding-right: 10px; */
 }
 
 ._dash-loading {
